--- a/frontend/index.html
+++ b/frontend/index.html
@@ -57,7 +57,7 @@
   </div>
 
 <script>
-  const API = ""; // якщо сайт і API на одному домені — лишай порожнім
+  const API = "https://restaurant-of-the-future.onrender.com"; // якщо сайт і API на одному домені — лишай порожнім
 
   const menuListEl = document.getElementById("menuList");
   const cartListEl = document.getElementById("cartList");
